apps/jupyter/proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-api
spec:
  selector:
    component: proxy
    app: jupyterhub
    release: jupyterhub
  ports:
    - port: 8001
      targetPort: api
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
spec:
  selector:
    component: proxy
    release: jupyterhub
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
